--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<html>
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="Images/original.png">
+    <link rel="icon" href="img/original.png">
     <title>MilkshakeTheCoder</title>
     <style type="text/css">
       #header {
@@ -32,9 +36,6 @@
               </div>
               <ul class="navbar_menu">
                   <li class="navbar_item">
-                      <a href="#home" class="navbar_links" id="home-page">Home</a>
-                  </li>
-                  <li class="navbar_item">
                       <a href="#about" class="navbar_links" id="about-page">About</a>
                   </li>
                   <li class="navbar_item">
@@ -51,7 +52,7 @@
       </nav>
 <div class="container">
   <section class="home_section" id="home"> 
-    <img src="Images/500px.png">
+    <img src="img/original.png">
     <br>
     <h1>
       <span id="header">M</span><span id="header">i</span><span id="header">l</span><span id="header">k</span><span id="header">s</span><span id="header">h</span><span id="header">a</span><span id="header">k</span><span id="header">e</span><span id="header">T</span><span id="header">h</span><span id="header">e</span><span id="header">C</span><span id="header">o</span><span id="header">d</span><span id="header">e</span><span id="header">r</span>
@@ -427,5 +428,5 @@
 <footer style="text-align: center; margin-top: 200px;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved.
 </footer>
-<script src="./main.js"></script>
+<script src="main.js"></script>
 </html>
