major rewrite before 1.2

--- a/assets/projects/cbotsecrets.html
+++ b/assets/projects/cbotsecrets.html
@@ -1,38 +1,72 @@
-<html style="color: #82b8ff;">
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="MilkshakeTheCoder" />
+    <meta property="og:image" href="img/logo.jpg" />
+    <meta name="author" content="MilkshakeTheCoder">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="MilkshakeTheCoder" />
+    <meta property="og:description" content="Eyy Wassup, I'm MilkshakeTheCoder. High-School Freshman, Programmer and Web-Developer." />
+    <meta property="og:url" content="https://milkshakethecoder.github.io" />
+    <meta property="og:site_name" content="MilkshakeTheCoder" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="projects.css">
-    <title>Secrets:Cafe_Bot</title>
+    <link rel="icon" href="../img/original.png">
+    <title>MilkshakeTheCoder</title>
+    <style type="text/css">
+      #header {
+        color: #82b8ff;
+        position: relative;
+        top: 0;
+        transition: top ease 0.4s;
+      }
+      #header:hover {
+        top: -10px;
+      }
+    </style>
   </head>
-<header>
-    <div class="container">
-      <h1 class="logo"></h1>
-      <nav>
-        <ul>
-          <li><a href="https://milkshakethecoder.github.io/index.html">Home</a></li>
-          <li><a href="https://milkshakethecoder.github.io/about.html">About</a></li>
-          <li><a href="https://milkshakethecoder.github.io/projects.html">Projects</a></li>
-          <li><a href="https://milkshakethecoder.github.io/experiences.html">Experiences</a></li>
-          <li><a href="https://milkshakethecoder.github.io/links.html">Links</a></li>
-        </ul>
+        <!-- Navbar -->
+        <nav class="navbar">
+          <div class="navbar_container">
+              <a href="#home" id="navbar_logo">MilkshakeTheCoder</a>
+              <ul class="navbar_menu">
+                  <li class="navbar_item">
+                      <a href="https://milkshakethecoder.github.io/index.html#about" class="navbar_links" id="about-page">About</a>
+                  </li>
+                  <li class="navbar_item">
+                      <a href="https://milkshakethecoder.github.io/index.html#exp" class="navbar_links" id="exp-page">Experiences</a>
+                  </li>
+                  <li class="navbar_item">
+                      <a href="https://milkshakethecoder.github.io/index.html#projects" class="navbar_links" id="projects-page">Projects</a>
+                  </li>
+                  <li class="navbar_item">
+                    <a href="https://milkshakethecoder.github.io/index.html#links" class="navbar_links" id="links-page">Links</a>
+                  </li>
+              </ul>
+          </div>
       </nav>
-    </div>
-</header>
-<main id="cbotsec">
-    <reposection>
-        <section style="text-align: center;">
-            <h3 id="if-you-re-using-replit-">If you&#39;re using Replit:</h3>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+<section class="general_section" id="links">
+  <div class="general_container">
+    <div class="general_card">
+            <h3 id="if-you-re-using-replit-" style="color: #82b8ff; text-align: center;">If you&#39;re using Replit:</h3><br>
             <p>You will need to go to the sidebar on your project to a section called Environment Variables, and add your Token and API_Key in the Key section, and the actual values in the Value section.</p>
+            <br>
             <p><img src="https://user-images.githubusercontent.com/83626443/118030800-9da09300-b31a-11eb-9fd0-ef9a2eff14b2.gif" alt="environmentvars"></p>
+            <br>
             <p>Only then, will the certain parts of the code (in main.py and cogs/mod.py) will work correctly. Everything else will work.</p>
             <p>I like using Replit, because it is easier in terms of hosting the bot 24/7.</p>
-        </section>
-        <section>
-            <h3 id="if-you-re-using-a-local-text-editor-" style="text-align: center;">If you&#39;re using a Local Text Editor:</h3>
+            <br>
+            <h3 id="if-you-re-using-a-local-text-editor-" style="text-align: center; color: #82b8ff;">If you&#39;re using a Local Text Editor:</h3>
+            <br>
             <ol>
             <li>Make sure you have set the current language to Python 3.6+. </li>
             <li>If you know that the code you&#39;re making will never reach the public, then in main.py and cogs/mod.py, you will have to replace the <code>os.getenviron[&#39;API_Key&#39;]</code> and <code>os.getenviron[&#39;Token&#39;]</code>. All instances of <code>os.getenviron[&#39;API_Key&#39;]</code> will be replaced with your actual api key, in str format! All instances of <code>os.getenviron[&#39;Token&#39;]</code> will need to be replaced with your actual bot token, also in str format. This is important. Remember, your token and api key will not appear magically! You have to remember to do these steps.</li>
@@ -43,10 +77,11 @@
             </ul>
             </li>
             </ol>
+            <br>
             <p style="text-align: center;"><img src="https://user-images.githubusercontent.com/83626443/118033835-1ead5980-b31e-11eb-829d-b1f14be94982.gif" alt="vscode2"></p>
-        </section>
-        <section style="text-align: center;">
-            <h3 id="in-between-">In Between:</h3>
+            <br>
+            <h3 id="in-between-" style="text-align: center; color: #82b8ff;">In Between:</h3>
+            <br>
             <ol>
             <li>Create a file called <code>secrets.json</code> in <code>bot_config</code>. (NOTE: This file should not be gitignored, so you should not post this version to github if you use this method.)</li>
             <li>You will need to put your secrets like this. <strong>Pro Tip</strong> (Try to keep the variable name the same, because otherwise it&#39;ll be a bunch of unwanted hassle.)<ul>
@@ -62,9 +97,9 @@
             }
             </p>
             <p>NOTE: You probably shouldn&#39;t put this one on Github, just for safety reasons, unless you are an absolute god at using  <code>.gitignore</code> files. :)</p>
+          </div>
+        </div>
         </section>
-    </reposection>
-</main>
 <footer style="text-align: center; color: #82b8ff;">
     @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
 </footer>
