--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:title" content="MilkshakeTheCoder" />
+    <meta property="og:image" href="img/logo.jpg" />
+    <meta name="author" content="MilkshakeTheCoder">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="MilkshakeTheCoder" />
+    <meta property="og:description" content="Eyy Wassup, I'm MilkshakeTheCoder. High-School Freshman, Programmer and Web-Developer." />
+    <meta property="og:url" content="https://milkshakethecoder.github.io" />
+    <meta property="og:site_name" content="MilkshakeTheCoder" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="img/original.png">
+    <link rel="icon" href="assets/img/original.png">
     <title>MilkshakeTheCoder</title>
     <style type="text/css">
       #header {
@@ -29,11 +33,6 @@
         <nav class="navbar">
           <div class="navbar_container">
               <a href="#home" id="navbar_logo">MilkshakeTheCoder</a>
-              <div class="navbar_toggle" id="mobile-menu">
-                  <span class="bar"></span> 
-                  <span class="bar"></span>
-                  <span class="bar"></span>
-              </div>
               <ul class="navbar_menu">
                   <li class="navbar_item">
                       <a href="#about" class="navbar_links" id="about-page">About</a>
@@ -52,13 +51,13 @@
       </nav>
 <div class="container">
   <section class="home_section" id="home"> 
-    <img src="img/original.png">
+    <img src="assets/img/original.png">
     <br>
     <h1>
       <span id="header">M</span><span id="header">i</span><span id="header">l</span><span id="header">k</span><span id="header">s</span><span id="header">h</span><span id="header">a</span><span id="header">k</span><span id="header">e</span><span id="header">T</span><span id="header">h</span><span id="header">e</span><span id="header">C</span><span id="header">o</span><span id="header">d</span><span id="header">e</span><span id="header">r</span>
     </h1>
     <h2 style="font-size: 3rem;">
-      9th Grader, Programmer and Web Developer
+      High-School Freshman, Programmer and Web Developer
     </h2>
     <br>
     <div class="icons">
@@ -82,7 +81,7 @@
       <span id="header">A</span><span id="header">b</span><span id="header">o</span><span id="header">u</span><span id="header">t</span> <span id="header">M</span><span id="header">e</span><span id="header">!</span>
     </h1>
       <p style="text-align: center;">
-        👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br>
+        👋 Hi, My name is Aahil. I am a rising freshman and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br>
     </p><br>
     <h2>Goals</h2>
     <p style="text-align: center;">College that I Aim to Enter:<br>
@@ -303,16 +302,16 @@
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
-        <img src="Projects/Imgs/Cafe_Bot.jpg" style="width: 100%; height: 80%; ">
+        <img src="assets/projects/img/Cafe_Bot.jpg" style="width: 100%; height: 80%; ">
       </a>
-    <h3 style="text-align: center;">Cafe Bot is an epic discord bot, with tons of features, and is fully developed in Python. For more information about it and to join my discord server check out the <a href="#links" class="navbar_links" style="color: #82b8ff; text-align: center;justify-content: center; align-items: center;">Links</a> page.</h3>
+    <h3 style="text-align: center;">Cafe Bot is an epic discord bot, with tons of features, and is fully developed in Python. For more information about it and to join my discord server check out the <a href="#links" style="color: #82b8ff; text-align: center;justify-content: center; align-items: center;">Links</a> page.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-python fa-3x" style="color:#3776AB;"></i><br></h3><br>
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Learning-Python">
-        <img src="Projects/Imgs/Learning-Python.jpg" style="width:100%; height:60%">
+        <img src="assets/img/py.jpg" style="width:100%; height:60%">
       </a>
     <h3 style="text-align: center;">Learning-Python is a repository I made to help beginners understand python.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-python fa-3x" style="color:#3776AB;"></i><br></h3><br>
@@ -321,7 +320,7 @@
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Learning-JS">
-        <img src="Projects/Imgs/Learning-JavaScript.jpg" style="width:100%; height:60%">
+        <img src="assets/img/js.jpg" style="width:100%; height:60%">
       </a>
     <h3 style="text-align: center;">Learning-JavaScript is a repository I am making which contains my knowledge about JS so far.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-js fa-3x" style="color:#fcff66;"></i><br></h3><br>
@@ -330,7 +329,7 @@
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Learning-HTML-CSS">
-        <img src="Projects/Imgs/Learning-HTML-CSS.jpg" style="width:100%; height:60%">
+        <img src="assets/img/htmlcss.jpg" style="width:100%; height:60%">
       </a>
     <h3 style="text-align: center;">Learning-HTML-CSS was a repository I made to help teach the basics of HTML/CSS to beginners.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-html5 fa-3x" style="color: rgb(197, 5, 5);"></i>⠀<i class="fab fa-css3-alt fa-3x" style="color: rgb(0, 79, 224);"></i></h3><br>
@@ -339,7 +338,7 @@
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Learning-Java">
-        <img src="Projects/Imgs/Learning-Java.jpg" style="width:100%; height:60%">
+        <img src="assets/img/java.jpg" style="width:100%; height:60%">
       </a>
     <h3 style="text-align: center;">Learning-Java was one of my most complicating repositories so far, and it shows what I know so far in Java.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-java fa-3x" style="color:#8b2800;"></i><br></h3><br>
@@ -348,7 +347,7 @@
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
       <a href="https://github.com/MilkshakeTheCoder/Learning-C">
-        <img src="Projects/Imgs/Learning-C.jpg" style="width:100%; height:60%">
+        <img src="assets/img/c.jpg" style="width:100%; height:60%">
       </a>
     <h3 style="text-align: center;">Learning-C is a repository that teaches the basics of C.</h3>
     <h3 style="text-align: center;">Made With: <br><br><i class="fab fa-cuttlefish fa-3x" style="color:#a3d6ff;"></i><br></h3><br>
@@ -365,22 +364,22 @@
   <!-- Thumbnail images -->
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Cafe_Bot.jpg" style="width:100%; height:115px" onclick="currentSlide(1)" alt="Cafe_Bot" >
+      <img class="demo cursor" src="assets/projects/img/Cafe_Bot.jpg" style="width:100%; height:115px" onclick="currentSlide(1)" alt="Cafe_Bot" >
     </div>
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Learning-Python.jpg" style="width:100%; height:115px" onclick="currentSlide(2)" alt="Learning-Python">
+      <img class="demo cursor" src="assets/img/py.jpg" style="width:100%; height:115px" onclick="currentSlide(2)" alt="Learning-Python">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Learning-JavaScript.jpg" style="width:100%; height:115px" onclick="currentSlide(3)" alt="Learning-JS">
+      <img class="demo cursor" src="assets/img/js.jpg" style="width:100%; height:115px" onclick="currentSlide(3)" alt="Learning-JS">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Learning-HTML-CSS.jpg" style="width:100%; height:115px" onclick="currentSlide(4)" alt="Learning-HTML/CSS">
+      <img class="demo cursor" src="assets/img/htmlcss.jpg" style="width:100%; height:115px" onclick="currentSlide(4)" alt="Learning-HTML/CSS">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Learning-Java.jpg" style="width:100%; height:115px" onclick="currentSlide(5)" alt="Learning-Java">
+      <img class="demo cursor" src="assets/img/java.jpg" style="width:100%; height:115px" onclick="currentSlide(5)" alt="Learning-Java">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Projects/Imgs/Learning-C.jpg" style="width:100%; height:115px" onclick="currentSlide(6)" alt="Learning-C">
+      <img class="demo cursor" src="assets/img/c.jpg" style="width:100%; height:115px" onclick="currentSlide(6)" alt="Learning-C">
     </div>
   </div>
 </div>
@@ -420,8 +419,11 @@
 <section class="general_section" id="links">
   <div class="general_container">
     <div class="general_card">
-<h1 style="text-align: center; color: #82b8ff;">Repo Information</h1>
-<p style="display: flex; justify-content:center;"><br><a href="https://milkshakethecoder.github.io/Projects/Cafe_Bot.html" style="color: #82b8ff;">Cafe_Bot</a></p>
+<h1 style="text-align: center;">
+  <span id="header">L</span><span id="header">i</span><span id="header">n</span><span id="header">k</span><span id="header">s</span><span id="header">!</span>
+</h1><br>
+<h2 style="text-align: center; color: #82b8ff;">Repo Information</h2><br>
+<p style="display: flex; justify-content:center;"><br><a href="assets/projects/cbot.html" style="color: #82b8ff;">Cafe_Bot</a></p>
 </div>
 </div>
 </section>
