major rewrite before 1.3

--- a/assets/projects/cbotsecrets.html
+++ b/assets/projects/cbotsecrets.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous">
     <link rel="stylesheet" href="projects.css">
     <link rel="icon" href="../img/original.png">
-    <title>MilkshakeTheCoder</title>
+    <title>Secrets</title>
     <style type="text/css">
       #header {
         color: #82b8ff;
@@ -32,7 +32,7 @@
         <!-- Navbar -->
         <nav class="navbar">
           <div class="navbar_container">
-              <a href="#home" id="navbar_logo">Secrets</a>
+              <a href="#home" id="navbar_logo">MilkshakeTheCoder</a>
               <ul class="navbar_menu">
                   <li class="navbar_item">
                       <a href="https://milkshakethecoder.github.io/index.html#about" class="navbar_links" id="about-page">About</a>
