major rewrite before 1.3

--- a/assets/projects/cbot.html
+++ b/assets/projects/cbot.html
@@ -32,7 +32,7 @@
         <!-- Navbar -->
         <nav class="navbar">
           <div class="navbar_container">
-              <a href="milkshakethecoder.github.io/index.html/#home" id="navbar_logo">MilkshakeTheCoder</a>
+              <a href="https://milkshakethecoder.github.io/index.html/#home" id="navbar_logo">MilkshakeTheCoder</a>
               <ul class="navbar_menu">
                   <li class="navbar_item">
                       <a href="https://milkshakethecoder.github.io/index.html#about" class="navbar_links" id="about-page">About</a>
