small but important details

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta property="og:title" content="MilkshakeTheCoder" />
-    <meta property="og:image" href="img/logo.jpg" />
+    <meta property="og:image" content="https://milkshakethecoder.github.io/assets/img/icons/logo.jpg" />
     <meta name="author" content="MilkshakeTheCoder">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="MilkshakeTheCoder" />
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="assets/img/original.png">
+    <link rel="icon" href="assets/img/icons/original.png">
     <title>MilkshakeTheCoder</title>
     <style type="text/css">
       #header {
@@ -51,7 +51,7 @@
       </nav>
 <div class="container">
   <section class="home_section" id="home"> 
-    <img src="assets/img/original.png">
+    <img src="assets/img/icons/original.png">
     <br>
     <h1>
       <span id="header">M</span><span id="header">i</span><span id="header">l</span><span id="header">k</span><span id="header">s</span><span id="header">h</span><span id="header">a</span><span id="header">k</span><span id="header">e</span><span id="header">T</span><span id="header">h</span><span id="header">e</span><span id="header">C</span><span id="header">o</span><span id="header">d</span><span id="header">e</span><span id="header">r</span>
