--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <html prefix="og: https://ogp.me/ns#">
-
 <head>
   <meta charset="UTF-8">
-  <meta property="og:title" content="MilkshakeTheCoder" />
-  <meta property="og:image" content="https://milkshakethecoder.github.io/assets/img/icons/logo.jpg" />
+  <title>MilkshakeTheCoder</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="icon" href="assets/img/icons/original.ico">
   <meta name="author" content="MilkshakeTheCoder">
+  <meta name="description" content="Hi! I'm MilkshakeTheCoder. A High-School Freshman, Programmer and Web-Developer." />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="MilkshakeTheCoder" />
-  <meta property="og:description"
-    content="Eyy Wassup, I'm MilkshakeTheCoder. High-School Freshman, Programmer and Web-Developer." />
+  <meta property="og:description" content="Hi! I'm MilkshakeTheCoder. A High-School Freshman, Programmer and Web-Developer." />
+  <meta property="og:image" content="https://milkshakethecoder.github.io/assets/img/icons/logo.jpg" />
   <meta property="og:url" content="https://milkshakethecoder.github.io" />
   <meta property="og:site_name" content="MilkshakeTheCoder" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
-  <link rel="icon" href="assets/img/icons/original.png">
-  <title>MilkshakeTheCoder</title>
   <style type="text/css">
     #header {
       color: #82b8ff;
