--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
     </div>
   </section>
 </div>
-
 <section class="general_section" id="about">
   <div class="general_container">
     <div class="general_card">
       <h1 style="text-align: center;">
-        <span id="header">A</span><span id="header">b</span><span id="header">o</span><span id="header">u</span><span
-          id="header">t</span> <span id="header">M</span><span id="header">e</span><span id="header">!</span>
+        <span id="header">A</span><span id="header">b</span><span id="header">o</span><span id="header">u</span><span id="header">t</span> <span id="header">M</span><span id="header">e</span><span id="header">!</span>
       </h1>
       <p style="text-align: center;">
         👋 Hi, My name is Aahil. I am a rising freshman and I plan on majoring in software engineering. I love to code
